--- a/index.html
+++ b/index.html
@@ -3,197 +3,262 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GlobTrack</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <title>Connexion / Inscription</title>
     <style>
-        #map {
-            height: 80vh;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            overflow-x: hidden;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f7f7f7;
+        }
+
+        .form-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            position: relative;
+        }
+
+        .form-header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        input[type="text"], input[type="password"], input[type="file"] {
             width: 100%;
-        }
-
-        .top-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             padding: 10px;
-            background-color: #333;
-            color: white;
+            margin: 5px 0;
+            border-radius: 4px;
+            border: 1px solid #ccc;
         }
 
-        .top-bar .left {
-            font-size: 30px;
-            cursor: pointer;
-        }
-
-        .top-bar .center {
-            font-size: 18px;
-            font-weight: bold;
-        }
-
-        .top-bar .right {
-            display: flex;
-            align-items: center;
-        }
-
-        .top-bar .right img {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        .logout-btn {
-            display: none;
-            margin-top: 10px;
-            background: #e74c3c;
-            padding: 10px;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        .profile-actions {
-            display: none;
-            flex-direction: column;
-            align-items: flex-end;
-            margin-top: 10px;
-        }
-
-        .profile-actions button {
-            padding: 10px;
+        button {
+            padding: 10px 20px;
             background-color: #3498db;
             color: white;
             border: none;
             cursor: pointer;
+            border-radius: 4px;
+            width: 100%;
         }
 
-        .profile-actions button:hover {
+        button:hover {
             background-color: #2980b9;
         }
 
-        .top-bar .right:hover .profile-actions {
-            display: flex;
+        .toggle-link {
+            text-align: center;
+            margin-top: 10px;
+            font-size: 14px;
+            cursor: pointer;
+            color: #3498db;
         }
+
+        .toggle-link:hover {
+            text-decoration: underline;
+        }
+
+        /* Style pour le menu latéral */
+        #menu {
+            position: fixed;
+            top: 0;
+            right: -250px;
+            width: 250px;
+            height: 100%;
+            background-color: #2c3e50;
+            transition: right 0.3s;
+            padding: 20px;
+            color: white;
+            z-index: 1000;
+        }
+
+        #menu a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: 10px 0;
+            font-size: 18px;
+            margin: 10px 0;
+        }
+
+        #menu a:hover {
+            background-color: #34495e;
+        }
+
+        .menu-toggle {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            cursor: pointer;
+        }
+
+        /* Pour la photo de profil */
+        .profile-picture {
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            object-fit: cover;
+            cursor: pointer;
+        }
+
+        /* Pour la barre latérale et son animation */
+        #sidebar-menu {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: -250px;
+            height: 100%;
+            background-color: #34495e;
+            width: 250px;
+            transition: 0.3s;
+            padding: 20px;
+            color: white;
+            z-index: 1001;
+        }
+
+        #sidebar-menu.open {
+            left: 0;
+        }
+
+        #sidebar-menu a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            margin-bottom: 15px;
+            display: block;
+        }
+
+        #sidebar-menu a:hover {
+            background-color: #2980b9;
+        }
+
     </style>
 </head>
 <body>
-    <!-- Barre en haut -->
-    <div class="top-bar">
-        <div class="left" id="menuToggle">☰</div>
-        <div class="center" id="explorationPercentage">Exploration : 0%</div>
-        <div class="right" id="profileSection">
-            <div class="profile-container">
-                <img src="default-profile.png" id="profilePic" alt="Profile Picture" onclick="toggleProfileActions()">
-            </div>
-            <div class="profile-actions" id="profileActions">
-                <button onclick="logout()">Déconnexion</button>
-            </div>
-        </div>
+
+<div class="container" id="form-container">
+    <!-- Connexion Form -->
+    <div id="login-form" class="form-container">
+        <h2 class="form-header">Se connecter</h2>
+        <input type="text" id="login-username" placeholder="Nom d'utilisateur" required>
+        <input type="password" id="login-password" placeholder="Mot de passe" required>
+        <button onclick="login()">Se connecter</button>
+        <p class="toggle-link" onclick="toggleForm()">Pas encore de compte ? S'inscrire</p>
     </div>
 
-    <!-- Carte -->
-    <div id="map"></div>
+    <!-- Inscription Form -->
+    <div id="register-form" class="form-container hidden">
+        <h2 class="form-header">S'inscrire</h2>
+        <input type="text" id="register-username" placeholder="Nom d'utilisateur" required>
+        <input type="password" id="register-password" placeholder="Mot de passe" required>
+        <input type="file" id="profile-picture" accept="image/*" required>
+        <button onclick="register()">S'inscrire</button>
+        <p class="toggle-link" onclick="toggleForm()">Déjà un compte ? Se connecter</p>
+    </div>
 
-    <!-- Scripts -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script>
-        let map, userPath = [], exploredAreas = [];
-        let currentUser = JSON.parse(localStorage.getItem('currentUser')) || null;
+    <!-- Menu latéral -->
+    <div id="sidebar-menu">
+        <a href="#" onclick="updateProfilePicture()">Changer la photo de profil</a>
+        <a href="#" onclick="changePassword()">Changer le mot de passe</a>
+        <a href="#" onclick="logout()">Se déconnecter</a>
+    </div>
 
-        // Vérifier si l'utilisateur est connecté
-        if (!currentUser) {
-            alert("Veuillez vous connecter pour continuer !");
-            window.location.href = 'login.html';  // Rediriger vers la page de connexion
-        }
+    <!-- Icône Hamburger pour menu -->
+    <div class="menu-toggle" onclick="toggleSidebarMenu()">&#9776;</div>
 
-        // Afficher la photo de profil ou la demande de profil
-        if (!currentUser.profilePic) {
-            alert("Veuillez télécharger une photo de profil !");
-            window.location.href = 'profile.html'; // Rediriger pour uploader la photo
+    <!-- Photo de profil -->
+    <img id="profile-image" src="default-profile.jpg" alt="Profil" class="profile-picture" onclick="toggleSidebarMenu()">
+</div>
+
+<script>
+    // Toggle form visibility
+    function toggleForm() {
+        const loginForm = document.getElementById('login-form');
+        const registerForm = document.getElementById('register-form');
+
+        loginForm.classList.toggle('hidden');
+        registerForm.classList.toggle('hidden');
+    }
+
+    // Handle login
+    function login() {
+        const username = document.getElementById('login-username').value;
+        const password = document.getElementById('login-password').value;
+
+        const users = JSON.parse(localStorage.getItem('users')) || [];
+        const currentUser = users.find(user => user.username === username && user.password === password);
+
+        if (currentUser) {
+            localStorage.setItem('currentUser', JSON.stringify(currentUser));
+            alert("Bienvenue " + username);
+            window.location.href = 'index.html';  // Page principale après connexion
         } else {
-            document.getElementById('profilePic').src = currentUser.profilePic;
+            alert('Nom d\'utilisateur ou mot de passe incorrect');
         }
+    }
 
-        // Initialisation de la carte
-        function initMap() {
-            map = L.map('map').fitWorld();
+    // Handle register
+    function register() {
+        const username = document.getElementById('register-username').value;
+        const password = document.getElementById('register-password').value;
+        const profilePicture = document.getElementById('profile-picture').files[0];
 
-            // Utiliser OpenStreetMap
-            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                maxZoom: 18,
-                attribution: '© OpenStreetMap'
-            }).addTo(map);
+        if (username && password && profilePicture) {
+            const users = JSON.parse(localStorage.getItem('users')) || [];
+            const newUser = {
+                username: username,
+                password: password,
+                profilePicture: URL.createObjectURL(profilePicture)
+            };
 
-            map.locate({ setView: true, maxZoom: 16 });
-
-            map.on('locationfound', onLocationFound);
-            map.on('locationerror', onLocationError);
-        }
-
-        function onLocationFound(e) {
-            const userLocation = e.latlng;
-
-            // Marqueur de l'utilisateur
-            L.marker(userLocation).addTo(map).bindPopup("Vous êtes ici").openPopup();
-
-            userPath.push(userLocation);
-            addExploredArea(userLocation);
-            updateExplorationPercentage();
-
-            // Suivre les déplacements
-            map.on('locationfound', updatePosition);
-        }
-
-        function onLocationError(e) {
-            alert(e.message);
-        }
-
-        function updatePosition(e) {
-            const newLocation = e.latlng;
-            userPath.push(newLocation);
-            addExploredArea(newLocation);
-
-            // Tracer le chemin parcouru
-            L.polyline(userPath, { color: '#4CAF50' }).addTo(map);
-            updateExplorationPercentage();
-        }
-
-        function addExploredArea(location) {
-            // Dégriser une zone de 50px autour de l'utilisateur
-            L.circle(location, {
-                color: '#4CAF50',
-                fillColor: '#4CAF50',
-                fillOpacity: 0.35,
-                radius: 50
-            }).addTo(map);
-        }
-
-        function updateExplorationPercentage() {
-            const totalArea = map.getSize().x * map.getSize().y;
-            const exploredArea = userPath.length * 50; // Estimation de l'aire explorée
-            const explorationPercentage = (exploredArea / totalArea) * 100;
-
-            document.getElementById('explorationPercentage').textContent = `Exploration : ${Math.round(explorationPercentage)}%`;
-        }
-
-        function toggleProfileActions() {
-            const actions = document.getElementById('profileActions');
-            const logoutBtn = document.getElementById('logoutBtn');
-            if (actions.style.display === 'none' || actions.style.display === '') {
-                actions.style.display = 'flex';
-                logoutBtn.style.display = 'block';
-            } else {
-                actions.style.display = 'none';
-                logoutBtn.style.display = 'none';
+            if (users.some(user => user.username === username)) {
+                alert("Ce nom d'utilisateur est déjà pris !");
+                return;
             }
-        }
 
-        function logout() {
-            localStorage.removeItem('currentUser');
-            window.location.href = 'login.html';
+            users.push(newUser);
+            localStorage.setItem('users', JSON.stringify(users));
+            alert("Inscription réussie ! Vous pouvez maintenant vous connecter.");
+            toggleForm();  // Switch back to login form
+        } else {
+            alert("Veuillez remplir tous les champs.");
         }
+    }
 
-        initMap();
-    </script>
+    // Toggle sidebar menu visibility
+    function toggleSidebarMenu() {
+        const sidebarMenu = document.getElementById('sidebar-menu');
+        sidebarMenu.classList.toggle('open');
+    }
+
+    // Logout function
+    function logout() {
+        localStorage.removeItem('currentUser');
+        alert("Vous êtes déconnecté !");
+        window.location.href = 'login.html';  // Rediriger vers la page de connexion
+    }
+
+    // Update profile picture (for example)
+    function updateProfilePicture() {
+        alert("Fonction de mise à jour de la photo de profil");
+    }
+
+    // Change password (for example)
+    function changePassword() {
+        alert("Fonction de changement de mot de passe");
+    }
+</script>
+
 </body>
 </html>
