--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <!-- Barre en haut : Affichée une fois connecté -->
+  <!-- Barre en haut (apparaît après la connexion) -->
   <div id="top-bar" class="top-bar" style="display: none;">
     <button class="menu-btn" onclick="toggleMenu()">&#9776;</button> <!-- Menu latéral -->
     <div class="exploration-percent">Exploration : 50%</div>
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <!-- Menu latéral : Affiché lorsqu'on clique sur les trois traits -->
+  <!-- Menu latéral (apparaît lorsqu'on clique sur les trois traits) -->
   <div id="side-menu" class="side-menu">
     <div class="menu-content">
       <h3>Menu</h3>
