--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
     </div>
   </div>
 
+  <!-- Carte (initialement masquée) -->
+  <div id="map-container" style="display: none;">
+    <div id="map"></div>
+  </div>
+
   <script src="app.js"></script>
 </body>
 </html>
