--- a/index.html
+++ b/index.html
@@ -1,71 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoTrack</title>
+    <title>GlobTrack</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <!-- Page d'authentification -->
-    <div id="auth-section">
-        <div id="auth-container">
-            <h2 id="auth-title">Se connecter</h2>
+    <!-- Page de connexion -->
+    <div id="auth-container">
+        <h2>Bienvenue sur GlobTrack</h2>
+        <div id="login-form">
+            <input type="text" id="username" placeholder="Nom d'utilisateur">
+            <input type="password" id="password" placeholder="Mot de passe">
+            <button onclick="login()">Se connecter</button>
+            <p>Pas encore de compte ? <a href="#" onclick="showRegister()">Inscris-toi</a></p>
+        </div>
 
-            <div id="login-form">
-                <input type="text" id="username" placeholder="Nom d'utilisateur" required>
-                <input type="password" id="password" placeholder="Mot de passe" required>
-                <button onclick="login()">Se connecter</button>
-                <button id="signup-btn" onclick="showSignupForm()">S'inscrire</button>
-            </div>
-
-            <div id="signup-form" style="display: none;">
-                <input type="text" id="new-username" placeholder="Nom d'utilisateur" required>
-                <input type="password" id="new-password" placeholder="Mot de passe" required>
-                <input type="file" id="profile-pic" accept="image/*" required>
-                <button onclick="signup()">S'inscrire</button>
-                <button onclick="showLoginForm()">Se connecter</button>
-            </div>
+        <div id="register-form" style="display: none;">
+            <input type="text" id="new-username" placeholder="Nom d'utilisateur">
+            <input type="password" id="new-password" placeholder="Mot de passe">
+            <input type="file" id="profile-pic">
+            <button onclick="register()">S'inscrire</button>
+            <p>Déjà un compte ? <a href="#" onclick="showLogin()">Connecte-toi</a></p>
         </div>
     </div>
 
-    <!-- Interface principale après connexion -->
-    <div id="main-section" style="display: none;">
-        <!-- Barre en haut -->
-        <div id="top-bar">
-            <div id="menu-btn" onclick="toggleMenu()">&#9776;</div>
-            <div id="exploration">Exploration : 0%</div>
-            <div id="profile-pic" onclick="toggleProfileMenu()">
-                <img src="default-avatar.png" id="profile-avatar" alt="Profil" />
+    <!-- Interface après connexion -->
+    <div id="app-container" style="display: none;">
+        <header>
+            <div id="menu-btn" onclick="toggleMenu()">☰</div>
+            <div id="exploration-progress">Exploration : <span id="progress-value">0%</span></div>
+            <div id="user-profile" onclick="toggleProfileMenu()">
+                <img id="profile-pic-display" src="default-avatar.png" alt="Profil">
             </div>
+        </header>
+
+        <div id="map"></div>
+
+        <div id="menu" class="sidebar">
+            <h3>Menu</h3>
+            <button onclick="changeTheme()">Changer de Thème</button>
+            <button onclick="logout()">Se Déconnecter</button>
         </div>
 
-        <!-- Carte -->
-        <div id="map-container">
-            <!-- La carte sera intégrée ici (à l'aide d'une API comme Google Maps ou OpenStreetMap) -->
-        </div>
-
-        <!-- Menu latéral -->
-        <div id="sidebar">
-            <ul>
-                <li><a href="#" onclick="changeProfilePic()">Changer photo de profil</a></li>
-                <li><a href="#" onclick="changePassword()">Changer mot de passe</a></li>
-                <li><a href="#" onclick="logout()">Se déconnecter</a></li>
-            </ul>
-        </div>
-
-        <!-- Menu de Profil -->
-        <div id="profile-menu" style="display: none;">
-            <button onclick="changeProfilePic()">Changer photo</button>
-            <button onclick="logout()">Se déconnecter</button>
+        <div id="profile-menu" class="sidebar">
+            <h3>Profil</h3>
+            <button onclick="changeProfilePic()">Modifier la photo</button>
+            <button onclick="changePassword()">Changer de mot de passe</button>
+            <button onclick="logout()">Se Déconnecter</button>
         </div>
     </div>
 
     <script src="app.js"></script>
-    <script src="map.js"></script>
 </body>
-
 </html>
