--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 
         <div id="menu" class="sidebar">
             <h3>Menu</h3>
-            <button onclick="changeTheme()">Changer de Thème</button>
+            <button onclick="changeTheme('light')">Thème Clair</button>
+            <button onclick="changeTheme('dark')">Thème Sombre</button>
+            <button onclick="changeTheme('pastel')">Thème Pastel</button>
+            <button onclick="changeTheme('highContrast')">Contraste Élevé</button>
             <button onclick="logout()">Se Déconnecter</button>
         </div>
 
